fix: 冻结 JDBC 查询结果值